make footer fixed and  visibleat the botoom of the page

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -56,4 +56,5 @@ footer {
     padding: 10px;
     width: 100%;
     position: fixed;
+    bottom: 0;
 }
